--- a/setup.cfg
+++ b/setup.cfg
@@ -6,6 +6,10 @@ version = attr: black_scm_diff.version.__version__
 package_dir =
   =src
 packages = find:
+install_requires =
+  black
+  python-intervals
+  whatthepatch
 
 [options.packages.find]
 where = src
