Rename to 'darker'

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
-name = black_scm_diff
-version = attr: black_scm_diff.version.__version__
+name = darker
+version = attr: darker.version.__version__
 
 [options]
 package_dir =
@@ -16,4 +16,4 @@ where = src
 
 [options.entry_points]
 console_scripts =
-  black_scm_diff = black_scm_diff.__main__:main
+  darker = darker.__main__:main
