Complete `setup.cfg` preparing for PyPI upload

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,17 +1,38 @@
 [metadata]
 name = darker
 version = attr: darker.version.__version__
+author = Antti Kaihola
+author_email = 13725+akaihola@users.noreply.github.com
+license = BSD
+license_file = LICENSE.rst
+long_description = file:README.rst
+long_description_content_type = text/x-rst
+classifiers =
+    Programming Language :: Python :: 3 :: Only
+    Programming Language :: Python :: 3.6
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+project_urls =
+    Source Code = https://github.com/akaihola/darker
+    Change Log = https://github.com/akaihola/darker/CHANGES.rst
+url = https://github.com/akaihola/darker
 
 [options]
+include_package_data = True
 package_dir =
-  =src
+    =src
 packages = find:
 install_requires =
-  black
+    black
+python_requires = >=3.6
 
 [options.packages.find]
 where = src
 
 [options.entry_points]
 console_scripts =
-  darker = darker.__main__:main
+    darker = darker.__main__:main
+
+[options.extras_require]
+test =
+    pytest
