--- a/setup.cfg
+++ b/setup.cfg
@@ -5,6 +5,7 @@ author = Antti Kaihola
 author_email = 13725+akaihola@users.noreply.github.com
 license = BSD
 license_file = LICENSE.rst
+description = Apply Black formatting only in regions changed since last commit
 long_description = file:README.rst
 long_description_content_type = text/x-rst
 classifiers =
