Stricter type checking with Mypy
Fixed a number of typing warnings this change generated

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,4 +1,39 @@
 [mypy]
+disallow_any_unimported = True
+disallow_any_expr = False
+disallow_any_decorated = True
+disallow_any_explicit = True
+disallow_any_generics = True
+disallow_subclassing_any = True
+
+disallow_untyped_calls = True
+disallow_untyped_defs = True
+disallow_incomplete_defs = True
+check_untyped_defs = True
+disallow_untyped_decorators = True
+
+no_implicit_optional = False
+strict_optional = True
+
+warn_redundant_casts = True
+warn_unused_ignores = True
+warn_no_return = True
+warn_return_any = True
+warn_unreachable = True
+
+show_none_errors = True
+ignore_errors = False
+
+allow_untyped_globals = False
+implicit_reexport = False
+strict_equality = True
+
+[mypy-darker.tests.*]
+disallow_any_decorated = False
+disallow_untyped_defs = False
+
+[mypy-darker.utils]
+warn_return_any = False
 
 [mypy-black.*]
 ignore_missing_imports = True
