--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ python:
   - "3.8-dev"  # 3.8 development branch
   - "nightly"  # nightly build
 install:
-  - pip install -e '.[test]'
+  - pip install -e '.[isort,test]'
 script: pytest
