Typing fixes to make Mypy happy

--- a/mypy.ini
+++ b/mypy.ini
@@ -28,6 +28,9 @@ allow_untyped_globals = False
 implicit_reexport = False
 strict_equality = True
 
+[mypy-darker.tests.conftest]
+disallow_any_unimported = False
+
 [mypy-darker.tests.*]
 disallow_any_decorated = False
 disallow_untyped_defs = False
@@ -39,6 +42,9 @@ warn_return_any = False
 ignore_missing_imports = True
 
 [mypy-isort.*]
+ignore_missing_imports = True
+
+[mypy-py.path.*]
 ignore_missing_imports = True
 
 [mypy-pytest.*]
