--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ python:
   - "nightly"  # nightly build
 install:
   - pip install -e '.[isort,test]'
-script: pytest --mypy src
+script: pytest --black --mypy src
