Run Isort as part of the pytest test run
Also configure `pytest` and `isort` in `pyproject.toml` so all the
extra checks and doctests are run by default both in Travis CI and
locally.

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,8 @@
 [pytest]
 doctest_optionflags = NORMALIZE_WHITESPACE
+show_capture = no
+addopts =
+  --black
+  --isort
+  --mypy
+  --doctest-modules
