Ignore setuptools type hints in Mypy check
This is needed since we now run pytest at the repository root on
Travis CI, so it checks `setup.py` as well.

--- a/mypy.ini
+++ b/mypy.ini
@@ -49,3 +49,6 @@ ignore_missing_imports = True
 
 [mypy-pytest.*]
 ignore_missing_imports = True
+
+[mypy-setuptools.*]
+ignore_missing_imports = True
