Disable pytest-isort

--- a/pytest.ini
+++ b/pytest.ini
@@ -3,6 +3,6 @@ doctest_optionflags = NORMALIZE_WHITESPACE
 show_capture = no
 addopts =
   --black
-  --isort
+#  --isort
   --mypy
   --doctest-modules
