--- a/setup.cfg
+++ b/setup.cfg
@@ -36,9 +36,10 @@ console_scripts =
 
 [options.extras_require]
 isort =
-    isort
+    isort>=5.0.1
 test =
     pytest
     pytest-black
-    pytest-isort
+    ## Disable pytest-isort until it is fixed to work with isort 5.x
+    #pytest-isort
     pytest-mypy
