Introduce BlackArgs type

--- a/setup.cfg
+++ b/setup.cfg
@@ -25,6 +25,7 @@ package_dir =
 packages = find:
 install_requires =
     black
+    typing-extensions ; python_version < "3.8"
 python_requires = >=3.6
 
 [options.packages.find]
