--- a/pytest.ini
+++ b/pytest.ini
@@ -3,7 +3,6 @@ doctest_optionflags = NORMALIZE_WHITESPACE
 show_capture = no
 addopts =
   --black
-  ## Disable pytest-isort until it is fixed to work with isort 5.x
-  #  --isort
+  --isort
   --mypy
   --doctest-modules
