--- a/setup.cfg
+++ b/setup.cfg
@@ -40,6 +40,5 @@ isort =
 test =
     pytest
     pytest-black
-    ## Disable pytest-isort until it is fixed to work with isort 5.x
-    #pytest-isort
+    pytest-isort>=1.1.0
     pytest-mypy
