--- a/mypy.ini
+++ b/mypy.ini
@@ -38,6 +38,11 @@ disallow_untyped_defs = False
 [mypy-darker.utils]
 warn_return_any = False
 
+[mypy-darker.pytest_darker]
+disallow_any_decorated = False
+disallow_any_explicit = False
+disallow_untyped_calls = False
+
 [mypy-black.*]
 ignore_missing_imports = True
 
