--- a/setup.cfg
+++ b/setup.cfg
@@ -34,6 +34,8 @@ where = src
 [options.entry_points]
 console_scripts =
     darker = darker.__main__:main
+pytest11 =
+    darker = darker.pytest_darker
 
 [options.extras_require]
 isort =
