Require Pytest 6.0.1+ for running the test suite
The type hints in `pytest_darker.py` only work with recent Pytest
versions.

--- a/setup.cfg
+++ b/setup.cfg
@@ -42,7 +42,7 @@ isort =
     isort>=5.0.1
 test =
     mypy>=0.782
-    pytest
+    pytest>=6.0.1
     pytest-black
     pytest-isort>=1.1.0
     pytest-mypy
