Darker source code can now be verified with Flake8

--- a/pytest.ini
+++ b/pytest.ini
@@ -3,6 +3,7 @@ doctest_optionflags = NORMALIZE_WHITESPACE
 show_capture = no
 addopts =
   --black
+  --flake8
   --isort
   --mypy
   --doctest-modules
