--- a/setup.cfg
+++ b/setup.cfg
@@ -42,6 +42,10 @@ isort =
 test =
     pytest
     pytest-black
+    pytest-flake8>=1.0.6
     pytest-isort>=1.1.0
     pytest-mypy
     pygments
+
+[flake8]
+max-line-length = 88
