Ignore flake8 rules which conflict with Black

--- a/setup.cfg
+++ b/setup.cfg
@@ -48,4 +48,11 @@ test =
     pygments
 
 [flake8]
+# Line length according to Black rules
 max-line-length = 88
+# Ignore rules which conflict with Black
+ignore =
+    # E231 missing whitespace after ','
+    E231
+    # W503 line break before binary operator
+    W503
