Read configuration from `pyproject.toml` (#49)
Also dumps configuration on terminal if debug level logging is enabled
with the `-vv` or `--verbose --verbose` command line option.

--- a/setup.cfg
+++ b/setup.cfg
@@ -25,6 +25,7 @@ package_dir =
 packages = find:
 install_requires =
     black
+    toml
     typing-extensions ; python_version < "3.8"
     dataclasses ; python_version < "3.7"
 python_requires = >=3.6
