--- a/mypy.ini
+++ b/mypy.ini
@@ -28,6 +28,12 @@ allow_untyped_globals = False
 implicit_reexport = False
 strict_equality = True
 
+[mypy-darker.command_line]
+disallow_any_explicit = False
+
+[mypy-darker.config]
+disallow_subclassing_any = False
+
 [mypy-darker.tests.conftest]
 disallow_any_unimported = False
 
