--- a/mypy.ini
+++ b/mypy.ini
@@ -28,7 +28,7 @@ allow_untyped_globals = False
 implicit_reexport = False
 strict_equality = True
 
-[mypy-darker.command_line]
+[mypy-darker.argparse_helpers]
 disallow_any_explicit = False
 
 [mypy-darker.config]
