--- a/mypy.ini
+++ b/mypy.ini
@@ -37,6 +37,9 @@ disallow_subclassing_any = False
 [mypy-darker.tests.conftest]
 disallow_any_unimported = False
 
+[mypy-darker.tests.helpers]
+disallow_any_explicit = False
+
 [mypy-darker.tests.*]
 disallow_any_decorated = False
 disallow_untyped_defs = False
