--- a/setup.cfg
+++ b/setup.cfg
@@ -24,7 +24,7 @@ package_dir =
     =src
 packages = find:
 install_requires =
-    black
+    black>=20.8b1
     toml
     typing-extensions ; python_version < "3.8"
     dataclasses ; python_version < "3.7"
