Test formatting w/ pytest-darker, not pytest-black
We'll gradually migrate to Black 20.8 formatting rules by checking
only modified lines. This is the first real-life use for the
configuration file feature together with `pytest-darker`.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,6 @@ python:
   - "3.8"
   - "3.8-dev"  # 3.8 development branch
 install:
+  - git fetch origin --depth=1 master:master
   - pip install -e '.[isort,test]'
 script: pytest
