--- a/setup.cfg
+++ b/setup.cfg
@@ -42,8 +42,8 @@ isort =
     isort>=5.0.1
 test =
     pylint
-    pytest
-    pytest-black
+    pytest>=5.4
+    pytest-darker
     pytest-flake8>=1.0.6
     pytest-isort>=1.1.0
     pytest-mypy
