--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ author_email = 13725+akaihola@users.noreply.github.com
 license = BSD
 license_file = LICENSE.rst
 description = Apply Black formatting only in regions changed since last commit
-long_description = file:README.rst
+# long_description is read and manipulated in setup.py
 long_description_content_type = text/x-rst
 classifiers =
     Programming Language :: Python :: 3 :: Only
