Fix language in commit hook description
Co-authored-by: Sean Hammond <15087653+sherbie@users.noreply.github.com>

--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -1,6 +1,6 @@
 - id: darker
   name: darker
-  description: "Black reformatting to Python files in only regions changed since last commit"
+  description: "Black reformatting to Python files only in regions changed since last commit"
   entry: darker
   language: python
   language_version: python3
