Use pre-commit-hooks-markup v1.0.1 from upstream

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,8 +12,8 @@ repos:
     hooks:
     -   id: darker
         args: [--revision HEAD]
--   repo: https://github.com/akaihola/pre-commit-hooks-markup
-    rev: raw-enable-option
+-   repo: https://github.com/Lucas-C/pre-commit-hooks-markup
+    rev: v1.0.1
     hooks:
     -   id: rst-linter
         args: [--allow-raw]
