--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ known_third_party = ["pytest"]
 src = [
     "src",
 ]
-revision = "master..."
+revision = "origin/master..."
 lint = [
     "pylint",
 ]
