Convert `main()` test to use pytest-kwparametrize

--- a/setup.cfg
+++ b/setup.cfg
@@ -46,6 +46,7 @@ test =
     pytest-darker
     pytest-flake8>=1.0.6
     pytest-isort>=1.1.0
+    pytest-kwparametrize>=0.0.3
     pytest-mypy
     pygments
 
