--- a/mypy.ini
+++ b/mypy.ini
@@ -52,6 +52,7 @@ warn_return_any = False
 
 [mypy-black.*]
 ignore_missing_imports = True
+implicit_reexport = True
 
 [mypy-isort.*]
 ignore_missing_imports = True
