--- a/mypy.ini
+++ b/mypy.ini
@@ -45,6 +45,7 @@ disallow_any_explicit = False
 
 [mypy-darker.tests.*]
 disallow_any_decorated = False
+disallow_untyped_calls = False
 disallow_untyped_defs = False
 
 [mypy-darker.utils]
