--- a/setup.cfg
+++ b/setup.cfg
@@ -50,6 +50,7 @@ test =
     pytest-kwparametrize>=0.0.3
     pytest-mypy
     pygments
+    types-dataclasses ; python_version < "3.7"
     types-toml>=0.1.3
 
 [flake8]
