Disable Mypy checks for the `regex` package

--- a/mypy.ini
+++ b/mypy.ini
@@ -75,3 +75,6 @@ ignore_missing_imports = True
 
 [mypy-pygments.lexers.*]
 ignore_missing_imports = True
+
+[mypy-regex]
+ignore_missing_imports = True
