Suppress traceback for invalid command line
Just display the error message.

--- a/setup.cfg
+++ b/setup.cfg
@@ -35,7 +35,7 @@ where = src
 
 [options.entry_points]
 console_scripts =
-    darker = darker.__main__:main
+    darker = darker.__main__:main_with_error_handling
 
 [options.extras_require]
 isort =
