--- a/setup.cfg
+++ b/setup.cfg
@@ -38,6 +38,9 @@ where = src
 [options.entry_points]
 console_scripts =
     darker = darker.__main__:main_with_error_handling
+pygments.lexers =
+    lint_location = darker.highlighting.lexers:LocationLexer
+    lint_description = darker.highlighting.lexers:DescriptionLexer
 
 [options.extras_require]
 isort =
