Expect Black>=21.7.b1 for static typing checks

--- a/setup.cfg
+++ b/setup.cfg
@@ -41,6 +41,7 @@ console_scripts =
 isort =
     isort>=5.0.1
 test =
+    black>=21.7b1  # to prevent Mypy error about `gen_python_files`, see issue #189
     mypy>=0.910
     pylint
     pytest>=6.1.0
