Fix Darker repo's own pre-commit configuration
Respect pre-commti's PRE_COMMIT_FROM_REF and PRE_COMMIT_TO_REF
environment variables. Install `isort` and a recent Black.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,7 +11,10 @@ repos:
     rev: master
     hooks:
     -   id: darker
-        args: [--revision HEAD]
+        args: [--isort]
+        additional_dependencies:
+          - black~=21.8b0
+          - isort~=5.9
 -   repo: https://github.com/Lucas-C/pre-commit-hooks-markup
     rev: v1.0.1
     hooks:
