--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,7 +8,7 @@ repos:
     -   id: check-yaml
     -   id: check-added-large-files
 -   repo: https://github.com/akaihola/darker
-    rev: master
+    rev: allow-overwrite-as-pre-commit-hook
     hooks:
     -   id: darker
         args: [--isort]
