--- a/setup.cfg
+++ b/setup.cfg
@@ -13,6 +13,8 @@ classifiers =
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
 project_urls =
     Source Code = https://github.com/akaihola/darker
     Change Log = https://github.com/akaihola/darker/blob/master/CHANGES.rst
