--- a/setup.cfg
+++ b/setup.cfg
@@ -44,6 +44,7 @@ isort =
     isort>=5.0.1
 test =
     black>=21.7b1  # to prevent Mypy error about `gen_python_files`, see issue #189
+    flake8<4
     mypy>=0.910
     pylint
     pytest>=6.1.0
