--- a/action.yml
+++ b/action.yml
@@ -15,7 +15,7 @@ inputs:
   version:
     description: 'Python Version specifier (PEP440) - e.g. "1.3.2"'
     required: false
-    default: ""
+    default: "1.3.2"
 branding:
   color: "black"
   icon: "check-circle"
