Ensure `regex` package is available for unit tests
Also use stdlib `re` for comparisons in tests since that's what actual
Darker code uses.

--- a/setup.cfg
+++ b/setup.cfg
@@ -57,6 +57,7 @@ test =
     pytest-kwparametrize>=0.0.3
     pytest-mypy
     pygments
+    regex>=2021.4.4
     types-dataclasses ; python_version < "3.7"
     types-toml>=0.1.3
 
