Add support for `black` >= 22.1.0

--- a/setup.cfg
+++ b/setup.cfg
@@ -26,7 +26,7 @@ package_dir =
     =src
 packages = find:
 install_requires =
-    black>=21.5b1
+    black>=22.1.0
     toml
     typing-extensions ; python_version < "3.8"
     dataclasses ; python_version < "3.7"
