--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -18,6 +18,11 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
         python-version: ['3.6', '3.7', '3.8', '3.9', '3.10']
+        constraints: ['']
+        include:
+        - os: ubuntu-latest
+          python-version: '3.7'
+          constraints: '--constraint constraints-oldest.txt'
 
     steps:
     - uses: actions/checkout@v2
@@ -30,7 +35,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade 'pip>=20.3'  # strict dependency resolution added in pip 20.3
-        pip install -e '.[isort,test]'
+        pip install -e '.[isort,test]' ${{ matrix.constraints }}
     - name: Test with pytest
       run: |
         pytest
