--- a/setup.cfg
+++ b/setup.cfg
@@ -26,10 +26,13 @@ package_dir =
     =src
 packages = find:
 install_requires =
+    # NOTE: remember to keep `constraints-oldest.txt` in sync with these
     black>=21.5b1
     toml
     typing-extensions ; python_version < "3.8"
     dataclasses ; python_version < "3.7"
+# NOTE: remember to keep `.github/workflows/python-package.yml` in sync
+#       with the minimum required Python version
 python_requires = >=3.6
 
 [options.packages.find]
@@ -46,6 +49,7 @@ pygments.lexers =
 isort =
     isort>=5.0.1
 test =
+    # NOTE: remember to keep `constraints-oldest.txt` in sync with these
     black>=21.7b1  # to prevent Mypy error about `gen_python_files`, see issue #189
     flake8<4
     mypy>=0.910
