--- a/setup.cfg
+++ b/setup.cfg
@@ -28,7 +28,7 @@ packages = find:
 install_requires =
     # NOTE: remember to keep `constraints-oldest.txt` in sync with these
     black>=21.5b1
-    toml
+    toml>=0.10.0
     typing-extensions ; python_version < "3.8"
     dataclasses ; python_version < "3.7"
 # NOTE: remember to keep `.github/workflows/python-package.yml` in sync
@@ -63,7 +63,7 @@ test =
     pygments
     regex>=2021.4.4
     types-dataclasses ; python_version < "3.7"
-    types-toml>=0.1.3
+    types-toml>=0.10.4
 
 [flake8]
 # Line length according to Black rules
