--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -10,14 +10,46 @@ on:
 
 
 jobs:
+
+  test-nixos:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os:
+        - ubuntu-latest
+        - macos-latest
+    steps:
+    - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
+    - uses: cachix/install-nix-action@v16
+      with:
+        nix_path: nixpkgs=channel:nixos-21.11
+    - name: Run tests in nix-shell
+      run: |
+        nix-shell --pure --run '
+          python -m venv venv
+          venv/bin/pip install -e '.[isort,test]'
+          venv/bin/pytest
+        ' ./default.nix
+
   build:
 
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ['3.6', '3.7', '3.8', '3.9', '3.10']
+        os:
+        - ubuntu-latest
+        #- windows-latest
+        - macos-latest
+        python-version:
+        #- '3.6'
+        #- '3.7'
+        #- '3.8'
+        #- '3.9'
+        - '3.10'
         constraints: ['']
         include:
         - os: ubuntu-latest
@@ -31,6 +63,7 @@ jobs:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
+
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
