--- a/action.yml
+++ b/action.yml
@@ -16,6 +16,11 @@ inputs:
     description: 'Python Version specifier (PEP440) - e.g. "1.4.0"'
     required: false
     default: "1.4.0"
+  revision:
+    description:
+      'Git revision range to compare when determining modified lines. '
+      'Determined automatically if omitted.'
+    required: false
 branding:
   color: "black"
   icon: "check-circle"
