--- a/action.yml
+++ b/action.yml
@@ -22,10 +22,15 @@ branding:
 runs:
   using: composite
   steps:
-    - run: |
-        # Exists since using github.action_path + path to main script doesn't work
-        # because bash interprets the backslashes in github.action_path (which are used
-        # when the runner OS is Windows) destroying the path to the target file.
+    - name: Commit Range
+      id: commit-range
+      uses: akaihola/darker/.github/actions/commit-range@gh-action-revisions
+    - name: Run Darker
+      run: |
+        # Exists since using github.action_path + path to main script doesn't
+        # work because bash interprets the backslashes in github.action_path
+        # (which are used when the runner OS is Windows) destroying the path to
+        # the target file.
         #
         # Also semicolons are necessary because I can't get the newlines to work
         entrypoint="import sys;
