--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -1,12 +1,13 @@
+---
 name: build
 
-on:
+on:  # yamllint disable-line rule:truthy
   push:
     branches:
-    - master
+      - master
   pull_request:
     branches:
-    - master
+      - master
 
 
 jobs:
@@ -17,22 +18,22 @@ jobs:
       fail-fast: false
       matrix:
         os:
-        - ubuntu-latest
-        - macos-latest
+          - ubuntu-latest
+          - macos-latest
     steps:
-    - uses: actions/checkout@v2
-      with:
-        fetch-depth: 0
-    - uses: cachix/install-nix-action@v16
-      with:
-        nix_path: nixpkgs=channel:nixos-21.11
-    - name: Run tests in nix-shell
-      run: |
-        nix-shell --pure --run '
-          python -m venv venv
-          venv/bin/pip install -e '.[isort,test]'
-          venv/bin/pytest
-        ' ./default.nix
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - uses: cachix/install-nix-action@v16
+        with:
+          nix_path: nixpkgs=channel:nixos-21.11
+      - name: Run tests in nix-shell
+        run: |
+          nix-shell --pure --run '
+            python -m venv venv
+            venv/bin/pip install -e '.[isort,test]'
+            venv/bin/pytest
+          ' ./default.nix
 
   build:
 
@@ -41,37 +42,38 @@ jobs:
       fail-fast: false
       matrix:
         os:
-        - ubuntu-latest
-        - windows-latest
-        - macos-latest
+          - ubuntu-latest
+          - windows-latest
+          - macos-latest
         python-version:
-        - '3.6'
-        - '3.7'
-        - '3.8'
-        - '3.9'
-        - '3.10'
+          - '3.6'
+          - '3.7'
+          - '3.8'
+          - '3.9'
+          - '3.10'
         constraints: ['']
         include:
-        - os: ubuntu-latest
-          python-version: '3.7'
-          constraints: '--constraint constraints-oldest.txt'
-        - os: ubuntu-latest
-          python-version: '3.10'
-          constraints: '--constraint constraints-future.txt'
+          - os: ubuntu-latest
+            python-version: '3.7'
+            constraints: '--constraint constraints-oldest.txt'
+          - os: ubuntu-latest
+            python-version: '3.10'
+            constraints: '--constraint constraints-future.txt'
 
     steps:
-    - uses: actions/checkout@v2
-      with:
-        fetch-depth: 0
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade 'pip>=20.3'  # strict dependency resolution added in pip 20.3
-        pip install -e '.[isort,test]' ${{ matrix.constraints }}
-    - name: Test with pytest
-      run: |
-        pytest
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install dependencies
+        run: |
+          # strict dependency resolution added in pip 20.3
+          python -m pip install --upgrade 'pip>=20.3'
+          pip install -e '.[isort,test]' ${{ matrix.constraints }}
+      - name: Test with pytest
+        run: |
+          pytest
