--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -1,6 +1,8 @@
+---
 - id: darker
   name: darker
-  description: "Black reformatting to Python files only in regions changed since last commit"
+  description: >-
+    Black reformatting to Python files only in regions changed since last commit
   entry: "darker -r :PRE-COMMIT:"
   language: python
   language_version: python3
