--- a/action.yml
+++ b/action.yml
@@ -16,7 +16,7 @@ inputs:
   version:
     description: 'Python Version specifier (PEP440) - e.g. "1.4.0"'
     required: false
-    default: "1.4.0"
+    default: "master"  # TODO: change "master" to "1.4.1" when releasing
   revision:
     description: >-
       Git revision range to compare when determining modified lines.
@@ -30,7 +30,8 @@ runs:
   steps:
     - name: Commit Range
       id: commit-range
-      uses: akaihola/darker/.github/actions/commit-range@gh-action-revisions
+      # TODO: change "master" to "1.4.1" when releasing:
+      uses: akaihola/darker/.github/actions/commit-range@master
     - name: Run Darker
       run: |
         # Exists since using github.action_path + path to main script doesn't
