--- a/action.yml
+++ b/action.yml
@@ -14,9 +14,9 @@ inputs:
     required: false
     default: "."
   version:
-    description: 'Python Version specifier (PEP440) - e.g. "1.4.0"'
+    description: 'Python Version specifier (PEP440) - e.g. "1.4.1"'
     required: false
-    default: "master"  # TODO: change "master" to "1.4.1" when releasing
+    default: "1.4.1"
   revision:
     description: >-
       Git revision range to compare when determining modified lines.
@@ -30,8 +30,7 @@ runs:
   steps:
     - name: Commit Range
       id: commit-range
-      # TODO: change "master" to "1.4.1" when releasing:
-      uses: akaihola/darker/.github/actions/commit-range@master
+      uses: akaihola/darker/.github/actions/commit-range@1.4.1
     - name: Run Darker
       run: |
         # Exists since using github.action_path + path to main script doesn't
