--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -60,6 +60,7 @@ jobs:
           - os: ubuntu-latest
             python-version: '3.10'
             constraints: '--constraint constraints-future.txt'
+            upgrade: '--upgrade --upgrade-strategy=eager'
 
     steps:
       - uses: actions/checkout@v2
@@ -71,10 +72,12 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
+        env:
+          pip_options: ${{ matrix.upgrade }} ${{ matrix.constraints }}
         run: |
           # strict dependency resolution added in pip 20.3
           python -m pip install --upgrade 'pip>=20.3'
-          pip install -e '.[isort,test]' ${{ matrix.constraints }}
+          pip install ${pip_options} -e '.[isort,test]'
       - name: Test with pytest
         run: |
           pytest
