--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -53,15 +53,17 @@ jobs:
           - '3.9'
           - '3.10'
         constraints: ['']
+        lint: ['--darker --flake8 --isort']
         include:
           - os: ubuntu-latest
             python-version: '3.7'
             constraints: '--constraint constraints-oldest.txt'
+            lint: ''
           - os: ubuntu-latest
             python-version: '3.10'
             constraints: '--constraint constraints-future.txt'
             upgrade: '--upgrade --upgrade-strategy=eager'
-
+            lint: ''
     env:
       RUN_MYPY: >-
         ${{ matrix.python-version == '3.9' || matrix.python-version == '3.10' }}
@@ -84,11 +86,11 @@ jobs:
       - name: Run Pytest without Mypy if Python < 3.9
         if: env.RUN_MYPY == 'false'
         run: |
-          pytest
+          pytest ${{ matrix.lint }}
       - name: Run Pytest with Mypy if Python >= 3.9
         if: env.RUN_MYPY == 'true'
         run: |
-          pytest --mypy
+          pytest ${{ matrix.lint }} --mypy
       - name: Bandit security audit for non-test code
         run: bandit --recursive --exclude=./src/darker/tests .
       - name: Bandit security audit for unit tests, allowing asserts
