Downgrade `requests-cache` for Py3.6 compatibility

--- a/setup.cfg
+++ b/setup.cfg
@@ -69,7 +69,8 @@ test =
     pytest-mypy
     pyupgrade>=2.31.0
     regex>=2021.4.4
-    requests_cache>=0.9.1
+    # TODO: upgrade requests-cache once we've dropped Python 3.6 support
+    requests_cache>=0.7,<0.8
     ruamel.yaml>=0.17.21
     safety>=1.10.3
     types-dataclasses ; python_version < "3.7"
@@ -78,7 +79,8 @@ test =
 release =
     airium>=0.2.3
     click>=8.0.0
-    requests_cache>=0.9.1
+    # TODO: upgrade requests-cache once we've dropped Python 3.6 support
+    requests_cache>=0.7,<0.8
 
 [flake8]
 # Line length according to Black rules
