Add script for updating contributors by templating

--- a/setup.cfg
+++ b/setup.cfg
@@ -50,6 +50,7 @@ isort =
     isort>=5.0.1
 test =
     # NOTE: remember to keep `constraints-oldest.txt` in sync with these
+    airium>=0.2.3
     bandit>=1.7.1
     black>=21.7b1  # to prevent Mypy error about `gen_python_files`, see issue #189
     codespell>=2.1.0
@@ -68,9 +69,16 @@ test =
     pytest-mypy
     pyupgrade>=2.31.0
     regex>=2021.4.4
+    requests_cache>=0.9.1
+    ruamel.yaml>=0.17.21
     safety>=1.10.3
     types-dataclasses ; python_version < "3.7"
+    types-requests>=2.27.9
     types-toml>=0.10.4
+release =
+    airium>=0.2.3
+    click>=8.0.0
+    requests_cache>=0.9.1
 
 [flake8]
 # Line length according to Black rules
