--- a/mypy.ini
+++ b/mypy.ini
@@ -47,6 +47,9 @@ disallow_any_explicit = False
 [mypy-darker.command_line]
 disallow_any_explicit = False
 
+[mypy-darker.concurrency]
+disallow_any_explicit = False
+
 [mypy-darker.config]
 disallow_subclassing_any = False
 
