--- a/.github/workflows/lint_python.yml
+++ b/.github/workflows/lint_python.yml
@@ -13,7 +13,7 @@ jobs:
       - run: black --check . || true  # Fails
       - run: darker --check . || true  # Fails
       - run: codespell --ignore-words-list="nd,unparseable"
-      - run: pip install -r requirements.txt || pip install --editable . || true
+      - run: pip install --editable .
       - run: mkdir --parents --verbose .mypy_cache
       - run: mypy --ignore-missing-imports --install-types --non-interactive . || true
       - run: darker-pytest .
