--- a/.github/workflows/lint_python.yml
+++ b/.github/workflows/lint_python.yml
@@ -8,8 +8,9 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
       - run: pip install --upgrade pip wheel
-      - run: pip install bandit codespell flake8 flake8-2020 flake8-bugbear
-                         flake8-comprehensions mypy pyupgrade safety
+      - run: pip install bandit codespell flake8 flake8-2020
+                         flake8-bugbear flake8-comprehensions
+                         mypy pyupgrade safety
       - run: bandit --recursive  --skip B101,B307,B404,B603 .
       - run: black --check . || true  # Fails
       - run: darker --check . || true  # Fails
