Move Bandit check to main workflow
Also do the fixes suggested by Bandit.

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -81,3 +81,7 @@ jobs:
       - name: Test with pytest
         run: |
           pytest
+      - name: Bandit security audit for non-test code
+        run: bandit --recursive --exclude=./src/darker/tests .
+      - name: Bandit security audit for unit tests, allowing asserts
+        run: bandit --recursive --skip B101 ./src/darker/tests
