--- a/setup.cfg
+++ b/setup.cfg
@@ -50,6 +50,7 @@ isort =
     isort>=5.0.1
 test =
     # NOTE: remember to keep `constraints-oldest.txt` in sync with these
+    bandit>=1.7.1
     black>=21.7b1  # to prevent Mypy error about `gen_python_files`, see issue #189
     flake8<4
     mypy>=0.931
