--- a/setup.cfg
+++ b/setup.cfg
@@ -52,6 +52,7 @@ test =
     # NOTE: remember to keep `constraints-oldest.txt` in sync with these
     bandit>=1.7.1
     black>=21.7b1  # to prevent Mypy error about `gen_python_files`, see issue #189
+    codespell>=2.1.0
     flake8<4
     mypy>=0.931
     pylint
@@ -75,3 +76,7 @@ ignore =
     E231
     # W503 line break before binary operator
     W503
+
+[codespell]
+ignore-words-list = nd
+skip = .git,*.json
