--- a/.github/workflows/lint_python.yml
+++ b/.github/workflows/lint_python.yml
@@ -8,8 +8,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
       - run: pip install --upgrade pip wheel
-      - run: pip install flake8 flake8-2020
-                 flake8-bugbear flake8-comprehensions mypy
+      - run: pip install mypy
                  pyupgrade safety
       - run: pip install --editable .
       - run: mypy --ignore-missing-imports --install-types --non-interactive . || true
