--- a/setup.cfg
+++ b/setup.cfg
@@ -54,6 +54,9 @@ test =
     black>=21.7b1  # to prevent Mypy error about `gen_python_files`, see issue #189
     codespell>=2.1.0
     flake8<4
+    flake8-2020>=1.6.1
+    flake8-bugbear>=22.1.11
+    flake8-comprehensions>=3.7.0
     mypy>=0.931
     pylint
     pytest>=6.1.0
@@ -72,6 +75,8 @@ test =
 max-line-length = 88
 # Ignore rules which conflict with Black
 ignore =
+    # C408 Unnecessary dict call - rewrite as a literal.
+    C408
     # E231 missing whitespace after ','
     E231
     # W503 line break before binary operator
