--- a/setup.cfg
+++ b/setup.cfg
@@ -58,6 +58,7 @@ test =
     flake8-bugbear>=22.1.11
     flake8-comprehensions>=3.7.0
     mypy>=0.931
+    pygments
     pylint
     pytest>=6.1.0
     pytest-darker
@@ -65,7 +66,7 @@ test =
     pytest-isort>=1.1.0
     pytest-kwparametrize>=0.0.3
     pytest-mypy
-    pygments
+    pyupgrade>=2.31.0
     regex>=2021.4.4
     types-dataclasses ; python_version < "3.7"
     types-toml>=0.10.4
