--- a/.github/workflows/lint_python.yml
+++ b/.github/workflows/lint_python.yml
@@ -8,8 +8,6 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
       - run: pip install --upgrade pip wheel
-      - run: pip install
-                 pyupgrade safety
+      - run: pip install safety
       - run: pip install --editable .
-      - run: shopt -s globstar && pyupgrade --py36-plus **/*.py
       - run: safety check
