Move `safety` check to main workflow
Add `safety` to test dependencies. Remove the `lint_python` workflow
since this was its only remaining check.

--- a/setup.cfg
+++ b/setup.cfg
@@ -68,6 +68,7 @@ test =
     pytest-mypy
     pyupgrade>=2.31.0
     regex>=2021.4.4
+    safety>=1.10.3
     types-dataclasses ; python_version < "3.7"
     types-toml>=0.10.4
 
