`bandit` suggestions for contributor update script

--- a/mypy.ini
+++ b/mypy.ini
@@ -68,6 +68,9 @@ disallow_untyped_defs = False
 [mypy-darker.utils]
 warn_return_any = False
 
+[mypy-defusedxml.*]
+ignore_missing_imports = True
+
 [mypy-isort.*]
 ignore_missing_imports = True
 
