--- a/setup.cfg
+++ b/setup.cfg
@@ -54,6 +54,7 @@ test =
     bandit>=1.7.1
     black>=21.7b1  # to prevent Mypy error about `gen_python_files`, see issue #189
     codespell>=2.1.0
+    defusedxml>=0.7.1
     flake8<4
     flake8-2020>=1.6.1
     flake8-bugbear>=22.1.11
@@ -79,6 +80,7 @@ test =
 release =
     airium>=0.2.3
     click>=8.0.0
+    defusedxml>=0.7.1
     # TODO: upgrade requests-cache once we've dropped Python 3.6 support
     requests_cache>=0.7,<0.8
 
