Add @phitoduck as contributor

--- a/contributors.yaml
+++ b/contributors.yaml
@@ -99,6 +99,8 @@ overratedpro:
   - {link_type: issues, type: Bug reports}
 philipgian:
   - {link_type: pulls-author, type: Code}
+phitoduck:
+  - {link_type: issues, type: Bug reports}
 qubidt:
   - {link_type: issues, type: Bug reports}
 rogalski:
