--- a/.github/workflows/bandit.yml
+++ b/.github/workflows/bandit.yml
@@ -1,20 +1,21 @@
+---
 name: Security check - Bandit
 
-on: push
+on: push  # yamllint disable-line rule:truthy
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - name: Bandit security check for code
-      uses: ioggstream/bandit-report-artifacts@v0.0.2
-      with:
-        config_file: .bandit.code.yaml
+      - name: Bandit security check for code
+        uses: ioggstream/bandit-report-artifacts@v0.0.2
+        with:
+          config_file: ./.bandit.code.yaml
 
-    - name: Bandit security check for tests
-      uses: ioggstream/bandit-report-artifacts@v0.0.2
-      with:
-        config_file: .bandit.tests.yaml
+      - name: Bandit security check for tests
+        uses: ioggstream/bandit-report-artifacts@v0.0.2
+        with:
+          config_file: ./.bandit.tests.yaml
