--- a/.bandit.code.yaml
+++ b/.bandit.code.yaml
@@ -2,4 +2,6 @@
 # Configuration for Bandit to run security checks on code,
 # excluding the test suite
 # Used in `.github/workflows/bandit.yml`
-exclude: ./src/darker/tests
+targets: .
+exclude_dirs:
+  - ./src/darker/tests
