--- a/.github/workflows/bandit.yml
+++ b/.github/workflows/bandit.yml
@@ -13,9 +13,11 @@ jobs:
       - name: Bandit security check for code
         uses: ioggstream/bandit-report-artifacts@v0.0.2
         with:
+          project_path: .
           config_file: ./.bandit.code.yaml
 
       - name: Bandit security check for tests
         uses: ioggstream/bandit-report-artifacts@v0.0.2
         with:
+          project_path: ./src/darker/tests
           config_file: ./.bandit.tests.yaml
