Add @tobiasdiez as a contributor

--- a/contributors.yaml
+++ b/contributors.yaml
@@ -125,6 +125,7 @@ talhajunaidd:
   - {link_type: commits, type: Code}
 tkolleh:
   - {link_type: issues, type: Bug reports}
+tobiasdiez: []
 virtuald:
   - {link_type: issues, type: Bug reports}
 wjdp:
