Allow `requests_cache` upgrade beyond 0.7.x
0.8 is incompatible with Python 3.6, but now that we're dropping py36
support, we can upgrade `requests_cache`.

--- a/setup.cfg
+++ b/setup.cfg
@@ -68,8 +68,7 @@ test =
     pytest-mypy
     pyupgrade>=2.31.0
     regex>=2021.4.4
-    # TODO: upgrade requests-cache once we've dropped Python 3.6 support
-    requests_cache>=0.7,<0.8
+    requests_cache>=0.7
     ruamel.yaml>=0.17.21
     safety>=1.10.3
     types-requests>=2.27.9
@@ -78,8 +77,7 @@ release =
     airium>=0.2.3
     click>=8.0.0
     defusedxml>=0.7.1
-    # TODO: upgrade requests-cache once we've dropped Python 3.6 support
-    requests_cache>=0.7,<0.8
+    requests_cache>=0.7
 
 [flake8]
 # Line length according to Black rules
