--- a/setup.cfg
+++ b/setup.cfg
@@ -71,8 +71,10 @@ test =
     requests_cache>=0.7
     ruamel.yaml>=0.17.21
     safety>=1.10.3
+    twine>=2.0.0
     types-requests>=2.27.9
     types-toml>=0.10.4
+    wheel>=0.21.0
 release =
     airium>=0.2.3
     click>=8.0.0
