--- a/.github/workflows/bandit.yml
+++ b/.github/workflows/bandit.yml
@@ -4,7 +4,7 @@ name: Security check - Bandit
 on: push  # yamllint disable-line rule:truthy
 
 jobs:
-  build:
+  bandit:
     runs-on: ubuntu-latest
 
     steps:
