--- a/setup.cfg
+++ b/setup.cfg
@@ -55,6 +55,7 @@ test =
     black>=21.7b1  # to prevent Mypy error about `gen_python_files`, see issue #189
     codespell>=2.1.0
     defusedxml>=0.7.1
+    isort>=5.0.1
     mypy>=0.940
     pygments
     pylint>=2.13.0
