Switch to upstream lint-action, update to July 11

--- a/.github/workflows/mypy.yml
+++ b/.github/workflows/mypy.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v3
       - run: pip install 'mypy>=0.940'
-      - uses: Gobot1234/lint-action@v.1.8.2
+      - uses: wearerequired/lint-action@v2.0.1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           mypy: true
